--- a/.github/workflows/gh-pages.yaml
+++ b/.github/workflows/gh-pages.yaml
@@ -16,7 +16,7 @@ jobs:
                   node-version: "14.x"
             - run: npm ci
             - run: npm run build
-            # - run: npx prettier --check .
+            - run: npx prettier --check .
 
             - name: Deploy
               uses: peaceiris/actions-gh-pages@v3
