--- a/.github/workflows/gh-pages.yaml
+++ b/.github/workflows/gh-pages.yaml
@@ -15,6 +15,7 @@ jobs:
               with:
                   node-version: "14.x"
             - run: npm ci
+            - run: npx tsc
             - run: npx prettier --check .
             - run: npm run build
 
