--- a/package.json
+++ b/package.json
@@ -3,24 +3,24 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@testing-library/jest-dom": "^5.11.9",
+        "@testing-library/jest-dom": "^5.11.10",
         "@testing-library/react": "^11.2.5",
-        "@testing-library/user-event": "^12.8.0",
-        "@types/jest": "^26.0.20",
-        "@types/node": "^14.14.31",
-        "@types/react": "^17.0.2",
-        "@types/react-dom": "^17.0.1",
-        "@types/styled-components": "^5.1.7",
+        "@testing-library/user-event": "^13.0.16",
+        "@types/jest": "^26.0.22",
+        "@types/node": "^14.14.37",
+        "@types/react": "^17.0.3",
+        "@types/react-dom": "^17.0.3",
+        "@types/styled-components": "^5.1.9",
         "husky": "^6.0.0",
         "nodemon": "^2.0.7",
-        "pm2": "^4.5.5",
+        "pm2": "^3.5.2",
         "prettier": "^2.2.1",
         "puppeteer": "^8.0.0",
-        "react": "^17.0.1",
-        "react-dom": "^17.0.1",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
         "react-scripts": "4.0.3",
         "styled-components": "^5.2.1",
-        "typescript": "^4.2.2",
+        "typescript": "^4.2.3",
         "wait-on": "^5.3.0"
     },
     "scripts": {
@@ -28,7 +28,7 @@
         "test": "react-scripts test",
         "eject": "react-scripts eject",
         "print": "mkdir -p output && node render.js",
-        "build": "mkdir -p output && BROWSER=none pm2 start --name web npm -- run start && npm run grab-pdf  && pm2 stop web && pm2 delete all",
+        "build": "mkdir -p output && rm -f output/*.pdf && BROWSER=none pm2 start --name web npm -- run start && npm run grab-pdf  && pm2 stop web && pm2 delete all && pm2 kill",
         "watch-pdf": "nodemon --exec 'npm run build' -e js,jsx,ts,tsx,css",
         "watch-pdf-fast": "nodemon --exec 'npm run grab-pdf' -e js,jsx,ts,tsx,css",
         "grab-pdf": "wait-on http://localhost:3000 && node render.js || true",
