--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "@types/node": "^14.14.37",
         "@types/react": "^17.0.3",
         "@types/react-dom": "^17.0.3",
+        "@types/react-icons": "^3.0.0",
         "@types/styled-components": "^5.1.9",
         "husky": "^6.0.0",
         "nodemon": "^2.0.7",
@@ -18,6 +19,7 @@
         "puppeteer": "^8.0.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-icons": "^4.2.0",
         "react-scripts": "4.0.3",
         "styled-components": "^5.2.1",
         "typescript": "^4.2.3",
