--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@types/react-dom": "^17.0.3",
         "@types/react-icons": "^3.0.0",
         "@types/styled-components": "^5.1.9",
+        "cspell": "^5.3.9",
         "husky": "^6.0.0",
         "nodemon": "^2.0.7",
         "pm2": "^3.5.2",
@@ -34,7 +35,8 @@
         "watch-pdf": "nodemon --exec 'npm run build' -e js,jsx,ts,tsx,css",
         "watch-pdf-fast": "nodemon --exec 'npm run grab-pdf' -e js,jsx,ts,tsx,css",
         "grab-pdf": "wait-on http://localhost:3000 && node render.js || true",
-        "lint": "npx prettier --write ."
+        "lint": "npx prettier --write . && npm run spellcheck",
+        "spellcheck": "cspell src/**/*.{tsx,ts,html}"
     },
     "eslintConfig": {
         "extends": [
