--- a/package.json
+++ b/package.json
@@ -3,38 +3,35 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@testing-library/jest-dom": "^5.11.10",
-        "@testing-library/react": "^11.2.5",
-        "@testing-library/user-event": "^13.0.16",
-        "@types/jest": "^26.0.22",
-        "@types/node": "^14.14.37",
-        "@types/react": "^17.0.3",
-        "@types/react-dom": "^17.0.3",
-        "@types/react-icons": "^3.0.0",
-        "@types/styled-components": "^5.1.9",
-        "cspell": "^5.3.9",
-        "husky": "^6.0.0",
-        "nodemon": "^2.0.7",
-        "pm2": "^3.5.2",
-        "prettier": "^2.2.1",
-        "puppeteer": "^8.0.0",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
-        "react-icons": "^4.2.0",
-        "react-scripts": "4.0.3",
-        "styled-components": "^5.2.1",
-        "typescript": "^4.2.3",
-        "wait-on": "^5.3.0"
+        "@emotion/css": "^11.10.5",
+        "@emotion/react": "^11.10.5",
+        "@emotion/styled": "^11.10.5",
+        "@types/node": "^18.11.18",
+        "@types/react": "^18.0.26",
+        "@types/react-dom": "^18.0.10",
+        "cspell": "^6.18.1",
+        "husky": "^8.0.3",
+        "nodemon": "^2.0.20",
+        "pm2": "^5.2.2",
+        "prettier": "^2.8.3",
+        "puppeteer": "^19.7.2",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-icons": "^4.11.0",
+        "react-markdown": "^8.0.4",
+        "react-scripts": "5.0.1",
+        "typescript": "^4.9.4",
+        "wait-on": "^7.0.1"
     },
     "scripts": {
-        "start": "react-scripts start",
+        "start": "export REACT_APP_VERSION=$(git rev-parse --short HEAD) && export HOST=0.0.0.0 && react-scripts start",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
-        "print": "mkdir -p output && node render.js",
-        "build": "mkdir -p output && rm -f output/*.pdf && BROWSER=none pm2 start --name web npm -- run start && npm run grab-pdf  && pm2 stop web && pm2 delete all && pm2 kill",
-        "watch-pdf": "nodemon --exec 'npm run build' -e js,jsx,ts,tsx,css",
+        "print": "export REACT_APP_VERSION=$(git rev-parse --short HEAD) && mkdir -p output && node render.js",
+        "build": "pm2 delete all || true && export REACT_APP_VERSION=$(git rev-parse --short HEAD) && mkdir -p output && BROWSER=none pm2 start --name web npm -- run start && npm run grab-pdf  && pm2 stop web && pm2 delete all && pm2 kill",
+        "watch-pdf": "nodemon --exec 'npm run build' -e js,jsx,ts,tsx,css,md",
         "watch-pdf-fast": "nodemon --exec 'npm run grab-pdf' -e js,jsx,ts,tsx,css",
-        "grab-pdf": "wait-on http://localhost:3000 && node render.js || true",
+        "grab-pdf": "wait-on -v http://127.0.0.1:3000 && node render.js || true",
         "lint": "npx prettier --write . && npm run spellcheck",
         "spellcheck": "cspell src/**/*.{tsx,ts,html}"
     },
